# aws-kms-xks-proxy

./: .gitignore  Dockerfile  Makefile  README.md  appspec.yml  buildspec.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: aws-kms-xks-proxy-issue.md
.github/workflows/: build.yml  makefile.yml
codepipeline/: README.md
codepipeline/scripts/: after-install  application-start  before-install  validate-service
docker/: Dockerfile  README.md  pkcs11-logger.spec  softhsm.spec
rpmspec/: xks-proxy.spec
scripts/: xks-proxy_cleanlogs
systemd/: xks-proxy.service  xks-proxy_cleanlogs.service  xks-proxy_cleanlogs.timer
xks-axum/: Cargo.toml
xks-axum/axum-server/: Cargo.toml
xks-axum/configuration/: bootstrap.toml  oso.polar  settings.toml  settings_cloudhsm.toml  settings_docker.toml  settings_luna.toml  settings_nshield.toml  settings_softhsmv2.toml  settings_softhsmv2_osx.toml
xks-axum/osx/: README.md
xks-axum/rust-pkcs11/src/: lib.rs  tests.rs  types.rs
xks-axum/src/: main.rs  settings.rs  tls.rs
xks-axum/src/xks_proxy/: mod.rs  pkcs11.rs  sigv4.rs
xks-axum/src/xks_proxy/handlers/: decrypt.rs  encrypt.rs  get_health_status.rs  get_key_meta_data.rs  mod.rs  oso_auth.rs
xks-axum/src/xks_proxy/handlers/testings/: encrypt_test.rs  mod.rs
xks-axum/tls/: client_ca.pem  server_cert.pem  server_key.pem
